// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchRow should render default view 1`] = `
<Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "minWidth": 200,
            }
          }
        >
          <WithStyles(FormControl)
            fullWidth={true}
          >
            <WithStyles(Select)
              aria-label="Click to select a field to search from the list - Select a field currently selected"
              error={true}
              onChange={[Function]}
              value="0"
            >
              <WithStyles(MenuItem)
                disabled={true}
                key="0"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="0"
              >
                Select a field
              </WithStyles(MenuItem)>
              <WithStyles(Divider)
                key="1"
              />
              <WithStyles(MenuItem)
                disabled={false}
                key="all"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="all"
              >
                Any field
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_title"
              >
                Title
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_book_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_book_title"
              >
                Book title for chapters
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_author"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author"
              >
                Author Name
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_author_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author_id"
              >
                Author ID
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_contributor"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor"
              >
                Editor/Contributor
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_contributor_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor_id"
              >
                Contributor ID
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_ismemberof"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_ismemberof"
              >
                Collection
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_doi"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_doi"
              >
                DOI
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_pid"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_pid"
              >
                PID
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_series"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_series"
              >
                Series
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_journal_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_journal_name"
              >
                Journal name
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_conference_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_conference_name"
              >
                Conference Name
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_publisher"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_publisher"
              >
                Publisher
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_genre_type"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_genre_type"
              >
                Thesis type
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_org_unit_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_org_unit_name"
              >
                School, Centre or Institute
              </WithStyles(MenuItem)>
            </WithStyles(Select)>
            <WithStyles(FormHelperText)
              error={true}
            >
              Please select a field to search
            </WithStyles(FormHelperText)>
          </WithStyles(FormControl)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs="auto"
        >
          <WithStyles(Typography) />
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          zeroMinWidth={true}
        >
          <AdvancedSearchRowInput
            classes={Object {}}
            disabledFields={Array []}
            inputField={
              Object {
                "ariaLabel": "Select a field to search on",
                "combiner": null,
                "hint": "Select a field to search on",
                "map": "",
                "order": 0,
                "title": "Select a field",
                "type": "TextField",
                "validation": Array [],
              }
            }
            onChange={[Function]}
            onSearchRowChange={[MockFunction]}
            onSearchRowDelete={[MockFunction]}
            rowIndex={0}
            searchField="0"
            value=""
          >
            <Component />
          </AdvancedSearchRowInput>
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={true}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(Divider) />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`AdvancedSearchRow should render search field row with given disabled options 1`] = `
<Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "minWidth": 200,
            }
          }
        >
          <WithStyles(FormControl)
            fullWidth={true}
          >
            <WithStyles(Select)
              aria-label="Click to select a field to search from the list - Any field currently selected"
              error={false}
              onChange={[Function]}
              value="all"
            >
              <WithStyles(MenuItem)
                disabled={true}
                key="0"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="0"
              >
                Select a field
              </WithStyles(MenuItem)>
              <WithStyles(Divider)
                key="1"
              />
              <WithStyles(MenuItem)
                disabled={true}
                key="all"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="all"
              >
                Any field
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_title"
              >
                Title
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_book_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_book_title"
              >
                Book title for chapters
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_author"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author"
              >
                Author Name
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_author_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author_id"
              >
                Author ID
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_contributor"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor"
              >
                Editor/Contributor
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_contributor_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor_id"
              >
                Contributor ID
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_ismemberof"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_ismemberof"
              >
                Collection
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_doi"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_doi"
              >
                DOI
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_pid"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_pid"
              >
                PID
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_series"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_series"
              >
                Series
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_journal_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_journal_name"
              >
                Journal name
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_conference_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_conference_name"
              >
                Conference Name
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_publisher"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_publisher"
              >
                Publisher
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_genre_type"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_genre_type"
              >
                Thesis type
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_org_unit_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_org_unit_name"
              >
                School, Centre or Institute
              </WithStyles(MenuItem)>
            </WithStyles(Select)>
            <WithStyles(FormHelperText)
              error={false}
            />
          </WithStyles(FormControl)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs="auto"
        >
          <WithStyles(Typography)>
            contains
          </WithStyles(Typography)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          zeroMinWidth={true}
        >
          <AdvancedSearchRowInput
            classes={Object {}}
            disabledFields={
              Array [
                "all",
                0,
              ]
            }
            inputField={
              Object {
                "ariaLabel": "Type a value to search all fields for",
                "captionValue": "anything",
                "combiner": "contains",
                "hint": "Add some text to search all fields with",
                "map": "",
                "order": 1,
                "title": "Any field",
                "type": "TextField",
                "validation": Array [
                  "maxLength500",
                ],
              }
            }
            onChange={[Function]}
            onSearchRowChange={[MockFunction]}
            onSearchRowDelete={[MockFunction]}
            rowIndex={0}
            searchField="all"
            value="i feel lucky"
          >
            <Component />
          </AdvancedSearchRowInput>
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={true}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(Divider) />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</Fragment>
`;

exports[`AdvancedSearchRow should render search field row with select field and search text 1`] = `
<Fragment>
  <WithStyles(Grid)
    container={true}
    spacing={16}
  >
    <WithStyles(Grid)
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          style={
            Object {
              "minWidth": 200,
            }
          }
        >
          <WithStyles(FormControl)
            fullWidth={true}
          >
            <WithStyles(Select)
              aria-label="Click to select a field to search from the list - Any field currently selected"
              error={false}
              onChange={[Function]}
              value="all"
            >
              <WithStyles(MenuItem)
                disabled={true}
                key="0"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="0"
              >
                Select a field
              </WithStyles(MenuItem)>
              <WithStyles(Divider)
                key="1"
              />
              <WithStyles(MenuItem)
                disabled={false}
                key="all"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="all"
              >
                Any field
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_title"
              >
                Title
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_book_title"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_book_title"
              >
                Book title for chapters
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_author"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author"
              >
                Author Name
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_author_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_author_id"
              >
                Author ID
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_contributor"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor"
              >
                Editor/Contributor
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_contributor_id"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_contributor_id"
              >
                Contributor ID
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_ismemberof"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_ismemberof"
              >
                Collection
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_doi"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_doi"
              >
                DOI
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_pid"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_pid"
              >
                PID
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_series"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_series"
              >
                Series
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_journal_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_journal_name"
              >
                Journal name
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_conference_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_conference_name"
              >
                Conference Name
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_publisher"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_publisher"
              >
                Publisher
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_genre_type"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_genre_type"
              >
                Thesis type
              </WithStyles(MenuItem)>
              <WithStyles(MenuItem)
                disabled={false}
                key="rek_org_unit_name"
                style={
                  Object {
                    "display": "block",
                  }
                }
                value="rek_org_unit_name"
              >
                School, Centre or Institute
              </WithStyles(MenuItem)>
            </WithStyles(Select)>
            <WithStyles(FormHelperText)
              error={false}
            />
          </WithStyles(FormControl)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          item={true}
          xs="auto"
        >
          <WithStyles(Typography)>
            contains
          </WithStyles(Typography)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      item={true}
      md={6}
      xs={12}
    >
      <WithStyles(Grid)
        container={true}
        spacing={16}
      >
        <WithStyles(Grid)
          item={true}
          zeroMinWidth={true}
        >
          <AdvancedSearchRowInput
            classes={Object {}}
            disabledFields={Array []}
            inputField={
              Object {
                "ariaLabel": "Type a value to search all fields for",
                "captionValue": "anything",
                "combiner": "contains",
                "hint": "Add some text to search all fields with",
                "map": "",
                "order": 1,
                "title": "Any field",
                "type": "TextField",
                "validation": Array [
                  "maxLength500",
                ],
              }
            }
            onChange={[Function]}
            onSearchRowChange={[MockFunction]}
            onSearchRowDelete={[MockFunction]}
            rowIndex={0}
            searchField="all"
            value="i feel lucky"
          >
            <Component />
          </AdvancedSearchRowInput>
        </WithStyles(Grid)>
        <Hidden
          implementation="js"
          lgDown={false}
          lgUp={false}
          mdDown={false}
          mdUp={true}
          smDown={false}
          smUp={false}
          xlDown={false}
          xlUp={false}
          xsDown={false}
          xsUp={false}
        >
          <WithStyles(Grid)
            item={true}
            xs={12}
          >
            <WithStyles(Divider) />
          </WithStyles(Grid)>
        </Hidden>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(Grid)>
</Fragment>
`;
